Fix spacing around image box on About page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ h2.active,
 .image-box {
   float: right;
   padding: 10px;
-  margin-left: 10px;
+  margin-left: 10px; margin-bottom: 10px;
   border: 1px solid #bfbfbf;
   background-color: #fafafa;
 }
